src/objects/collect__Loan_account_Due_Details__c.object
<CustomObject>
    <fields>
        <fullName>collect__Balance_Amount__c</fullName>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__DD_Primary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Due_Amt__c</fullName>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Late_Charge_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Charge Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Account__c</fullName>
        <label>Dev Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Dues_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>collect__Payment_Amt__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Payment_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Rental_Due_Amount__c</fullName>
        <label>Rental Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Tax_Due_Amount__c</fullName>
        <label>Tax Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Total_Due_Amount__c</fullName>
        <label>Total Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Total_Paid_Amount__c</fullName>
        <label>Total Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bills</label>
    <nameField>
        <displayFormat>PCN-{0000000000}</displayFormat>
        <label>Due Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>